--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -27,13 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5a4d665d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-27T19:48:59.441583Z",
+     "start_time": "2025-11-27T19:48:57.666096Z"
+    }
+   },
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
-   ]
+    "#получаем число\n",
+    "num5 = str(input(\"Введите пятизначное число\"))\n",
+    "print(\"Ваше число =\",num5)\n",
+    "#инвертируем 3 центральные цифры\n",
+    "inv_num5 = num5[0] + num5[3:0:-1] + num5 [4]\n",
+    "print(\"Измененное число =\",inv_num5)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ваше число = 13256\n",
+      "Измененное число = 15236\n"
+     ]
+    }
+   ],
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
