--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -30,29 +30,27 @@
    "id": "5a4d665d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T19:48:59.441583Z",
-     "start_time": "2025-11-27T19:48:57.666096Z"
+     "end_time": "2025-11-27T21:08:20.056047Z",
+     "start_time": "2025-11-27T21:08:17.336340Z"
     }
    },
    "source": [
-    "#получаем число\n",
-    "num5 = str(input(\"Введите пятизначное число\"))\n",
-    "print(\"Ваше число =\",num5)\n",
-    "#инвертируем 3 центральные цифры\n",
+    "# получаем число\n",
+    "num5 = str(input(\"Введите пятизначное число:\"))\n",
+    "# инвертируем 3 центральные цифры\n",
     "inv_num5 = num5[0] + num5[3:0:-1] + num5 [4]\n",
-    "print(\"Измененное число =\",inv_num5)\n"
+    "print(num5 + ' -> ' + inv_num5)\n"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваше число = 13256\n",
-      "Измененное число = 15236\n"
+      "12345 -> 14325\n"
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 71
   },
   {
    "cell_type": "markdown",
@@ -73,13 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "07154103",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-27T21:07:45.191847Z",
+     "start_time": "2025-11-27T21:07:42.708977Z"
+    }
+   },
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
-   ]
+    "# получаем общее число дней до отпуска\n",
+    "days_remaining = int(input(\"Введите число дней до отпуска:\"))\n",
+    "# делим на 7 и отбрасываем все float\n",
+    "weekends = int(days_remaining / 7 * 2)\n",
+    "print(str(days_remaining) + ' -> ' + str(weekends))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -> 0\n"
+     ]
+    }
+   ],
+   "execution_count": 67
   },
   {
    "cell_type": "markdown",
@@ -100,13 +115,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "70f3324c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-27T21:21:53.766640Z",
+     "start_time": "2025-11-27T21:21:51.375266Z"
+    }
+   },
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
-   ]
+    "# получаем параметры\n",
+    "length = int(input(\"Введите длину:\"))\n",
+    "width = int(input(\"Введите ширину:\"))\n",
+    "size = int(input(\"Введите желаемый размер куска:\"))\n",
+    "\n",
+    "\n",
+    "if (0 < size <= width * length  # проверяем чтобы размер куска был больше нуля и меньше чем площадь\n",
+    "        and (size % width == 0 or size % length == 0)): # проверяем чтобы размер делился нацело хотя бы на одну из сторон\n",
+    "    result = True\n",
+    "    print(f\"{length}, {width}, {size} -> {result}\")\n",
+    "else:\n",
+    "    result = False\n",
+    "    print(f\"{length}, {width}, {size} -> {result}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 1 -> True\n"
+     ]
+    }
+   ],
+   "execution_count": 90
   },
   {
    "cell_type": "markdown",
