added 3 new tasks hw1

--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -28,29 +28,16 @@
   {
    "cell_type": "code",
    "id": "5a4d665d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-27T21:08:20.056047Z",
-     "start_time": "2025-11-27T21:08:17.336340Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# получаем число\n",
-    "num5 = str(input(\"Введите пятизначное число:\"))\n",
+    "num5 = input(\"Введите пятизначное число:\")\n",
     "# инвертируем 3 центральные цифры\n",
-    "inv_num5 = num5[0] + num5[3:0:-1] + num5 [4]\n",
+    "inv_num5 = num5[0] + num5[3:0:-1] + num5[4]\n",
     "print(num5 + ' -> ' + inv_num5)\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12345 -> 14325\n"
-     ]
-    }
-   ],
-   "execution_count": 71
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -72,12 +59,7 @@
   {
    "cell_type": "code",
    "id": "07154103",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-27T21:07:45.191847Z",
-     "start_time": "2025-11-27T21:07:42.708977Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# получаем общее число дней до отпуска\n",
     "days_remaining = int(input(\"Введите число дней до отпуска:\"))\n",
@@ -85,16 +67,8 @@
     "weekends = int(days_remaining / 7 * 2)\n",
     "print(str(days_remaining) + ' -> ' + str(weekends))"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 -> 0\n"
-     ]
-    }
-   ],
-   "execution_count": 67
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -118,8 +92,8 @@
    "id": "70f3324c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T21:21:53.766640Z",
-     "start_time": "2025-11-27T21:21:51.375266Z"
+     "end_time": "2025-11-28T18:19:59.078679Z",
+     "start_time": "2025-11-28T18:19:51.842098Z"
     }
    },
    "source": [
@@ -128,25 +102,23 @@
     "width = int(input(\"Введите ширину:\"))\n",
     "size = int(input(\"Введите желаемый размер куска:\"))\n",
     "\n",
-    "\n",
-    "if (0 < size <= width * length  # проверяем чтобы размер куска был больше нуля и меньше чем площадь\n",
-    "        and (size % width == 0 or size % length == 0)): # проверяем чтобы размер делился нацело хотя бы на одну из сторон\n",
+    "# проверяем, чтобы размер куска был больше нуля и меньше (или равен, если уже готовый кусок) всей плитки\n",
+    "if 0 < size <= width * length and (not size % width or not size % length): # +проверяем чтобы размер делился нацело хотя бы на одну из сторон\n",
     "    result = True\n",
-    "    print(f\"{length}, {width}, {size} -> {result}\")\n",
     "else:\n",
     "    result = False\n",
-    "    print(f\"{length}, {width}, {size} -> {result}\")"
+    "print(f\"{length}, {width}, {size} -> {result}\")"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1, 1, 1 -> True\n"
+      "12, 11, 6 -> False\n"
      ]
     }
    ],
-   "execution_count": 90
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -167,18 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "8686127c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
-   ]
+    "# ввод числа\n",
+    "arabic_num = input(\"Введите целое положительное число: \")\n",
+    "print(len(arabic_num))\n"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "ca6a4c0a",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e18ec05996564a84"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Задание 5: Проверка на вещественное число\n",
     "\n",
@@ -191,17 +172,127 @@
     "* `.78  -> True`\n",
     "* `.67. -> False`\n",
     "* `5    -> True`"
-   ]
+   ],
+   "id": "4a856f6dcabe019f"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74e39179",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
+   "source": "# ВАШ КОД ЗДЕСЬ",
+   "id": "5eadb164c13eafeb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6fdd47368092d87"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
-   ]
+    "## Задача 1: Переворот строки\n",
+    "Напишите программу, которая запрашивает у пользователя строку и выводит её в обратном порядке."
+   ],
+   "id": "ccf9fe23294f191e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-28T19:25:45.459071Z",
+     "start_time": "2025-11-28T19:25:40.806741Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sentence1 = input(\"Введите любую строку:\")\n",
+    "print(f'{sentence1} -> {sentence1[::-1]}')"
+   ],
+   "id": "1252aa45e1bd1a09",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Белеет мой парус -> сурап йом теелеБ\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Задача 2: Подсчёт слов в предложении\n",
+    "Запросите у пользователя предложение и подсчитайте количество слов в нём.\n",
+    "## Задача 2: Подсчёт слов в предложении\n",
+    "Запросите у пользователя предложение и подсчитайте количество слов в нём.\n"
+   ],
+   "id": "ed994ef3139d5e3f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-28T19:34:11.136271Z",
+     "start_time": "2025-11-28T19:34:00.135965Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sentence2 = input(\"Введите любую строку:\")\n",
+    "num_words = len(sentence2.split( ))\n",
+    "print(f'Количество слов в предложении \"{sentence2}\": {num_words}')"
+   ],
+   "id": "82ba4b75e5317095",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество слов в предложении \"Ехал грека через реку видит Грека в реке рак\": 9\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Задача 3: Замена символов\n",
+    "Запросите у пользователя строку и замените все пробелы на подчёркивания.\n"
+   ],
+   "id": "ecbe79b69cd3eb30"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-28T19:33:47.193649Z",
+     "start_time": "2025-11-28T19:33:39.317306Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "space_sentence = input(\"Введите любую строку:\")\n",
+    "no_space_sentence = space_sentence.replace(\" \", \"_\")\n",
+    "print(no_space_sentence)"
+   ],
+   "id": "5c7be62357ddce9d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Белеет_мой_парус_такой_одинокий\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   }
  ],
  "metadata": {
